Fixed index page, added Fireworks generator
The fireworks generator is now a powerful tool that creates beautiful geometric patterns with customizable shapes, colors, and arrangements - all optimized for pen plotting workflows. The clean interface makes it easy to experiment with different combinations and export professional-quality SVG files.

--- a/index.html
+++ b/index.html
@@ -192,14 +192,10 @@
                 icon: '🪐',
                 description: 'Interactive solar system visualization with accurate planetary positions and orbital mechanics. Features elliptical orbits, time-based positioning, and detailed planet rendering with Saturn\'s rings.',
                 features: [
-                    'Real-time planetary position calculations',
-                    'Elliptical orbit rendering with accurate eccentricity',
-                    'Time-based positioning (2000-2050)',
-                    'Interactive zoom and pan controls',
-                    'Planet visibility toggles',
-                    'SVG export for pen plotting',
-                    'Planet hatching and shading options',
-                    'Asteroid belt visualization'
+                    'Real-time planetary position calculations with accurate orbital mechanics',
+                    'Interactive zoom and pan controls with time-based positioning (2000-2050)',
+                    'SVG export for pen plotting with hatching and shading options',
+                    'Planet visibility toggles and asteroid belt visualization'
                 ]
             },
             'wave-pattern-generator.html': {
@@ -207,14 +203,10 @@
                 icon: '🌊',
                 description: 'Sophisticated wave pattern creation tool with mathematically precise visualizations. Perfect for artistic patterns, scientific visualizations, and decorative designs with customizable properties.',
                 features: [
-                    'Multiple wave types and algorithms',
-                    'Real-time parameter adjustment',
-                    'Interactive wave manipulation',
-                    'High-resolution pattern generation',
-                    'Export capabilities for various formats',
-                    'Customizable wave properties',
-                    'Mathematical precision controls',
-                    'Artistic pattern variations'
+                    'Multiple wave types and algorithms with real-time parameter adjustment',
+                    'Interactive wave manipulation and high-resolution pattern generation',
+                    'Export capabilities for various formats with customizable properties',
+                    'Mathematical precision controls for artistic and scientific visualizations'
                 ]
             },
             'geometric-pattern-generator-Gemini-090425.html': {
@@ -222,14 +214,10 @@
                 icon: '🔷',
                 description: 'Advanced geometric pattern creation system with intricate, mathematically-based patterns using geometric principles. Ideal for tessellations, fractals, and complex geometric art generation.',
                 features: [
-                    'Multiple geometric pattern algorithms',
-                    'Real-time pattern generation',
-                    'Customizable geometric parameters',
-                    'Interactive pattern manipulation',
-                    'High-resolution output options',
-                    'Mathematical precision controls',
-                    'Pattern variation systems',
-                    'Export for digital and print use'
+                    'Multiple geometric pattern algorithms with real-time generation',
+                    'Customizable geometric parameters and interactive manipulation',
+                    'High-resolution output options with mathematical precision controls',
+                    'Pattern variation systems with export for digital and print use'
                 ]
             },
             'kaleidoscope-generator.html': {
@@ -237,14 +225,10 @@
                 icon: '🔮',
                 description: 'Mesmerizing kaleidoscope pattern generator creating beautiful symmetrical designs with geometric shapes. Features adjustable symmetry, multiple shapes, color schemes, and hatching.',
                 features: [
-                    'Adjustable symmetry segments (3-24)',
-                    'Multiple geometric shape types',
-                    'Rainbow and custom color modes',
-                    'Real-time pattern animation',
-                    'Hatching fill options',
-                    'Shape outline controls',
-                    'Pattern scale and rotation',
-                    'SVG export for pen plotting'
+                    'Adjustable symmetry segments (3-24) with multiple geometric shape types',
+                    'Rainbow and custom color modes with real-time pattern animation',
+                    'Hatching fill options and shape outline controls',
+                    'Pattern scale and rotation with SVG export for pen plotting'
                 ]
             },
             'mandala-generator.html': {
@@ -252,14 +236,21 @@
                 icon: '🕉️',
                 description: 'Beautiful mandala pattern creator with radial symmetry and spiritual designs. Features multiple pattern types, layer controls, color schemes, and gradient fills for artistic creation.',
                 features: [
-                    'Radial symmetry with 4-64 segments',
-                    'Multiple pattern types (geometric, floral, spiral)',
-                    'Layer-based mandala structure',
-                    'Gradient and solid fill options',
-                    'Custom color schemes',
-                    'Hatching and outline controls',
-                    'Traditional mandala elements',
-                    'SVG export for meditation art'
+                    'Radial symmetry with 4-64 segments and multiple pattern types',
+                    'Layer-based mandala structure with gradient and solid fill options',
+                    'Custom color schemes with hatching and outline controls',
+                    'Traditional mandala elements with SVG export for meditation art'
+                ]
+            },
+            'fireworks-generator.html': {
+                title: '🎆 Fireworks',
+                icon: '🎆',
+                description: 'Dynamic fireworks display generator with customizable patterns, colors, and shapes. Create stunning pyrotechnic visualizations with geometric sub-components and burst patterns.',
+                features: [
+                    'Customizable main shapes (circle, star, heart, diamond, spiral) with geometric sub-components',
+                    'Multiple color palettes and custom color selection with burst pattern variations',
+                    'Interactive controls for size, count, and animation with real-time generation',
+                    'SVG export for pen plotting and digital use with click-to-place functionality'
                 ]
             }
         };
