--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@
                 description: 'Interactive solar system visualization with accurate planetary positions and orbital mechanics. Features elliptical orbits, time-based positioning, and detailed planet rendering with Saturn\'s rings.',
                 features: [
                     'Real-time planetary position calculations with accurate orbital mechanics',
-                    'Interactive zoom and pan controls with time-based positioning (2000-2050)',
-                    'SVG export for pen plotting with hatching and shading options',
+                    'Interactive zoom and pan with time-based positioning (2000-2050)',
                     'Planet visibility toggles and asteroid belt visualization'
                 ]
             },
@@ -205,7 +204,6 @@
                 features: [
                     'Multiple wave types and algorithms with real-time parameter adjustment',
                     'Interactive wave manipulation and high-resolution pattern generation',
-                    'Export capabilities for various formats with customizable properties',
                     'Mathematical precision controls for artistic and scientific visualizations'
                 ]
             },
@@ -215,9 +213,8 @@
                 description: 'Advanced geometric pattern creation system with intricate, mathematically-based patterns using geometric principles. Ideal for tessellations, fractals, and complex geometric art generation.',
                 features: [
                     'Multiple geometric pattern algorithms with real-time generation',
-                    'Customizable geometric parameters and interactive manipulation',
-                    'High-resolution output options with mathematical precision controls',
-                    'Pattern variation systems with export for digital and print use'
+                    'Customizable parameters and interactive manipulation',
+                    'Pattern variation systems for tessellations and fractals'
                 ]
             },
             'kaleidoscope-generator.html': {
@@ -225,10 +222,9 @@
                 icon: '🔮',
                 description: 'Mesmerizing kaleidoscope pattern generator creating beautiful symmetrical designs with geometric shapes. Features adjustable symmetry, multiple shapes, color schemes, and hatching.',
                 features: [
-                    'Adjustable symmetry segments (3-24) with multiple geometric shape types',
+                    'Adjustable symmetry segments (3-24) with multiple geometric shapes',
                     'Rainbow and custom color modes with real-time pattern animation',
-                    'Hatching fill options and shape outline controls',
-                    'Pattern scale and rotation with SVG export for pen plotting'
+                    'Hatching fill options and shape outline controls'
                 ]
             },
             'mandala-generator.html': {
@@ -237,9 +233,8 @@
                 description: 'Beautiful mandala pattern creator with radial symmetry and spiritual designs. Features multiple pattern types, layer controls, color schemes, and gradient fills for artistic creation.',
                 features: [
                     'Radial symmetry with 4-64 segments and multiple pattern types',
-                    'Layer-based mandala structure with gradient and solid fill options',
-                    'Custom color schemes with hatching and outline controls',
-                    'Traditional mandala elements with SVG export for meditation art'
+                    'Layer-based structure with gradient and solid fill options',
+                    'Traditional mandala elements with custom color schemes'
                 ]
             },
             'fireworks-generator.html': {
@@ -248,9 +243,8 @@
                 description: 'Dynamic fireworks display generator with customizable patterns, colors, and shapes. Create stunning pyrotechnic visualizations with geometric sub-components and burst patterns.',
                 features: [
                     'Customizable main shapes (circle, star, heart, diamond, spiral) with geometric sub-components',
-                    'Multiple color palettes and custom color selection with burst pattern variations',
-                    'Interactive controls for size, count, and animation with real-time generation',
-                    'SVG export for pen plotting and digital use with click-to-place functionality'
+                    'Toggle color selection with burst pattern variations',
+                    'Click-to-place functionality with real-time generation'
                 ]
             }
         };
